# AI_BI_Copliot

./: .gitattributes  .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  business-health-fields.md
attached_assets/: Pasted-You-are-a-Senior-Principal-Frontend-Engineer-20-years-e_1783529070142.txt
project/ai_bi_copilot/: .env  CODEX_GUIDE.md  ai_bi.db  alembic.ini  check_db.py  generate_report.py  inspect_db.py  main.py  requirements.txt  test.py  test_llm.py  test_workflow.py
project/ai_bi_copilot/agents/: analysis_agent.py  anomaly_agent.py  base_agent.py  business_analysis_agent.py  chat_agent.py  cleaning_agent.py  email_agent.py  forecast_agent.py  ingestion_agent.py  insight_agent.py  kpi_agent.py  recommendation_agent.py  report_agent.py  schema_agent.py  visualization_agent.py
project/ai_bi_copilot/alembic/: env.py
project/ai_bi_copilot/core/: config.py  exceptions.py  handlers.py  logging.py
project/ai_bi_copilot/database/: __init__.py  base.py  init_db.py  session.py
project/ai_bi_copilot/llm/: prompts.py  provider.py
project/ai_bi_copilot/reports/: business_metrics.json
project/ai_bi_copilot/schemas/: business_analysis_schema.py  kpi_schema.py  report_schema.py
project/ai_bi_copilot/services/: action_plan_service.py  alert_service.py  analysis_service.py  anomaly_service.py  bi_service.py  business_analyst_service.py  chat_indexing_service.py  chat_service.py  dataframe_service.py  dataset_service.py  email_service.py  email_template_service.py  executive_dashboard_service.py  executive_summary_service.py  file_storage_service.py  (+13 more)
(+32 files in other folders)
