[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.10.0",
    "loguru>=0.7.3",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
